Pretified code.